# xmAppCamera

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md  imgui.ini
.github/workflows/: ci.yml
docs/: DESIGN.md  LESSONS.md
docs/adr/: 0001-architecture-and-stack.md
docs/design/: config-schema.md  hardware-notes.md  implementation-plan.md  multi-camera.md
include/xmcam/app/: app_controller.hpp
include/xmcam/control/: control_info.hpp  control_introspector.hpp  control_set.hpp
include/xmcam/core/: fanout_sink.hpp  frame_sink.hpp  pixel_format.hpp  result.hpp  source_caps.hpp  source_descriptor.hpp  source_stats.hpp  video_frame.hpp
include/xmcam/core/util/: rate_counter.hpp  scope_timer.hpp
include/xmcam/export/: camera_config.hpp  config_reader.hpp  config_writer.hpp  file_sink.hpp  rtsp_sink.hpp
include/xmcam/pipeline/: gst_compressed_decoder.hpp  gst_jpeg_decoder.hpp  gst_source.hpp  gst_util.hpp  v4l2_device.hpp  v4l2_source.hpp  video_source.hpp
include/xmcam/qualify/: frame_tap.hpp  qual_checks.hpp  qual_report.hpp  qual_types.hpp
include/xmcam/ui/: control_panel.hpp  device_panel.hpp  export_panel.hpp  frame_texture.hpp  main_docking_panel.hpp  pipeline_panel.hpp  preview_panel.hpp  qualify_panel.hpp  stats_panel.hpp  stats_view.hpp  widgets.hpp  yuv_converter.hpp
packaging/: xmappcamera.desktop
scripts/test/: udp_h264_stream.sh
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app_controller.cpp  main.cpp
src/control/: CMakeLists.txt  control_introspector.cpp  control_set.cpp
src/core/: CMakeLists.txt  pixel_format.cpp  result.cpp  source_caps.cpp
src/export/: CMakeLists.txt  config_reader.cpp  config_writer.cpp  file_sink.cpp  rtsp_sink.cpp
src/pipeline/: CMakeLists.txt  gst_compressed_decoder.cpp  gst_jpeg_decoder.cpp  gst_source.cpp  gst_util.cpp  v4l2_device.cpp  v4l2_source.cpp
src/qualify/: CMakeLists.txt  frame_tap.cpp  qual_checks.cpp  qual_report.cpp  qual_types.cpp
src/ui/: CMakeLists.txt  control_panel.cpp  device_panel.cpp  export_panel.cpp  frame_texture.cpp  main_docking_panel.cpp  pipeline_panel.cpp  preview_panel.cpp  qualify_panel.cpp  stats_panel.cpp  yuv_converter.cpp
test/: CMakeLists.txt
test/app/: CMakeLists.txt  test_sessions.cpp
test/control/: CMakeLists.txt  test_control_introspect.cpp
test/core/: CMakeLists.txt  test_pixel_format.cpp  test_rate_counter.cpp  test_source_caps.cpp
test/export/: CMakeLists.txt  test_config_roundtrip.cpp  test_file_sink.cpp
test/pipeline/: CMakeLists.txt  test_compressed_decoder.cpp  test_gst_source.cpp  test_v4l2_enumerate.cpp
test/qualify/: CMakeLists.txt  test_qualify.cpp
tools/: CMakeLists.txt  gst_stream_smoke.cpp  v4l2_capture_smoke.cpp
tools/control/: CMakeLists.txt  control_probe.cpp
